Build: body header

--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>Calculadora</title>
 </head>
 <body>
-    
+    <div class="fundo">
+        <h1>Calculadora - Thallys</h1>
+
+            <div class="calculadora">
+                <h1>Calculadora</h1>
+                    <p id="resultado">
+                        <table>
+                            <tr>
+                                <td><button>C</button></td>
+                                <td><button>C</button></td>
+                                <td><button>C</button></td>
+                                <td><button>C</button></td>
+                            </tr>
+                        </table>
+                    </p>
+            </div>
+    </div>
 </body>
 </html>
