--- a/index.html
+++ b/index.html
@@ -18,9 +18,27 @@
                         <table>
                             <tr>
                                 <td><button>C</button></td>
-                                <td><button>C</button></td>
-                                <td><button>C</button></td>
-                                <td><button>C</button></td>
+                                <td><button><</button></td>
+                                <td><button>/</button></td>
+                                <td><button>x</button></td>
+                            </tr>
+                            <tr>
+                                <td><button>7</button></td>
+                                <td><button>8</button></td>
+                                <td><button>9</button></td>
+                                <td><button>-</button></td>
+                            </tr>
+                            <tr>
+                                <td><button>4/button></td>
+                                <td><button>5</button></td>
+                                <td><button>6</button></td>
+                                <td><button>+</button></td>
+                            </tr>
+                            <tr>
+                                <td><button>1/button></td>
+                                <td><button>2</button></td>
+                                <td><button>3</button></td>
+                                <td><button>=</button></td>
                             </tr>
                         </table>
                     </p>
