--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                                 <td><button>-</button></td>
                             </tr>
                             <tr>
-                                <td><button>4<button></td>
+                                <td><button>4</button></td>
                                 <td><button>5</button></td>
                                 <td><button>6</button></td>
                                 <td><button>+</button></td>
                             </tr>
                             <tr>
-                                <td><button>1<button></td>
+                                <td><button>1</button></td>
                                 <td><button>2</button></td>
                                 <td><button>3</button></td>
-                                <td><button>=</button></td>
+                                <td rowspan="2"><button>=</button></td>
                             </tr>
                             <tr>
-                                <td><button>0<button></td>
+                                <td colspan="2"><button>0</button></td>
                                 <td><button>.</button></td>
                             </tr>
                         </table>
