--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                                 <td><button class="botao">1</button></td>
                                 <td><button class="botao">2</button></td>
                                 <td><button class="botao">3</button></td>
-                                <td rowspan="2"><button class="botao">=</button></td>
+                                <td rowspan="2"><button class="botao igual">=</button></td>
                             </tr>
                             <tr>
-                                <td colspan="2"><button class="botao">0</button></td>
+                                <td colspan="2"><button class="botao zero">0</button></td>
                                 <td><button class="botao">.</button></td>
                             </tr>
                         </table>
