--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <td rowspan="2"><button class="botao igual">=</button></td>
                             </tr>
                             <tr>
-                                <td colspan="2"><button class="botao zero">0</button></td>
+                                <td colspan="2"><button class="botao zero" onclick="insert('0')">0</button></td>
                                 <td><button class="botao">.</button></td>
                             </tr>
                         </table>
