Refactor: js and html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <p id="resultado">
                         <table>
                             <tr>
-                                <td><button class="botao" onclick="clear()">C</button></td>
-                                <td><button class="botao"><</button></td>
+                                <td><button class="botao" onclick="clean()">C</button></td>
+                                <td><button class="botao" onclick="back()">CE</button></td>
                                 <td><button class="botao" onclick="insert('/')">/</button></td>
                                 <td><button class="botao" onclick="insert('*')">*</button></td>
                             </tr>
@@ -42,7 +42,7 @@
                             </tr>
                             <tr>
                                 <td colspan="2"><button class="botao zero" onclick="insert('0')">0</button></td>
-                                <td><button class="botao">.</button></td>
+                                <td><button class="botao" onclick="insert('.')">.</button></td>
                             </tr>
                         </table>
                     </p>
