--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <td><button class="botao" onclick="insert('1')">1</button></td>
                                 <td><button class="botao" onclick="insert('2')">2</button></td>
                                 <td><button class="botao" onclick="insert('3')">3</button></td>
-                                <td rowspan="2"><button class="botao igual">=</button></td>
+                                <td rowspan="2"><button class="botao igual" onclick="calcular()">=</button></td>
                             </tr>
                             <tr>
                                 <td colspan="2"><button class="botao zero" onclick="insert('0')">0</button></td>
